Resume game and Save Game integration with API added, related backend bugs fixed
